# prefq

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  prefq_documentation.md  pyproject.toml
.github/workflows/: pre-commit.yaml
docs/: rest-api.md
figures/prefq_diagram/: prefq.uxf
prefq/: .gitignore  __init__.py  imitation_server.py  query_client.py  server.py
prefq/examples/: imitation_preference_comparisons.py  query_client.py  random_recordings.py  static_queries.py  updated_imitation_modules.py
prefq/static/: web_interface.js
prefq/templates/: easteregg.html  no_data_availible.html  web_interface.html
scripts/: run_imitation_example.sh  run_imitation_server.sh  run_server.sh  run_static_queries_example.sh
tests/: test_prefq.py
