[tool.isort]
profile = "black"

[tool.poetry]
name = "prefq"
version = "0.1.0"
description = "Getting preference feedback from real humans."
authors = ["Timo Kaufmann"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
moviepy = "^1.0.3"
flask = "<2.3" # Since we rely on the before_first_request decorator (https://flask.palletsprojects.com/en/2.2.x/api/?highlight=before_first_request#flask.Flask.before_first_request)
gym = {extras = ["box2d"], version = "^0.26.2"}

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
pylint = "^2.17.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
