[tool.isort]
profile = "black"

[tool.poetry]
name = "prefq"
version = "0.1.0"
description = "Getting preference feedback from real humans."
authors = ["Timo Kaufmann"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
moviepy = "^1.0.3"
flask = "<2.3" # Since we rely on the before_first_request decorator (https://flask.palletsprojects.com/en/2.2.x/api/?highlight=before_first_request#flask.Flask.before_first_request)
# Needed to install gym 0.21. 
# https://github.com/openai/gym/issues/3176#issuecomment-1408598628
setuptools = {version = "65.5.0"}
pip = "21"
gym = {extras = ["box2d"], version = "^0.21.0", optional = true}
imitation = {version = "^0.3.2", optional = true}
stable-baselines3 = {version = ">=1.7.0,<2.0.0", optional = true}

[tool.poetry.extras]
examples = ["imitation", "gym", "setuptools"]

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
pylint = "^2.17.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
