[tool.isort]
profile = "black"

[tool.poetry]
name = "prefq"
version = "0.1.0"
description = "Getting preference feedback from real humans."
authors = ["Timo Kaufmann"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
moviepy = "^1.0.3"
waitress = "2.1.2"
cryptography = "^3.4.8"
flask = "^3.0.2"
gymnasium = {extras = ["box2d"], version = "^0.29.1", optional = true}
imitation = { git = "https://github.com/rk1a/imitation", branch = "human-prefs", optional = true}
# This is a dependency of imitation, but we need to specify it explicitly to
# avoid version 2.0.1 and 2.1.0 which have issues with the dependency specification:
# https://stackoverflow.com/questions/76327419/valueerror-libcublas-so-0-9-not-found-in-the-system-path
torch = {version = ">=2.0.0, !=2.0.1, !=2.1.0", optional = true, extras=["cpu"]}
stable-baselines3 = {version = "^2.1.0", optional = true}

[tool.poetry.extras]
examples = ["imitation", "torch", "gymnasium"]

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
pylint = "^2.17.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
